# rai

./: .gitignore  01_lab_Intro_RL.ipynb  Lab_02_Q_Learning.ipynb  Lab_08_Policy_Gradients_complete.ipynb  Lab_10_DQN_cartpole.ipynb  Lab_10_DQN_cartpole_solved.ipynb  Lab_Annealing_and_UCB.ipynb  Lab_QLearning_cartpole.ipynb  Lab_policy_gradients_cartpole.ipynb  README.md  agent.py  algorithms.txt  cannibals.py  csp_sudoku.py  data.py  dql_2048.pth  gg.py  index.html  lunar3.pth  lunar_vec.pth  ngpt.py  perceptron.py  pyproject.toml  questions.txt  solutions.txt  sudoku.py  sudoku.txt  vtable.json  weight.py
P02_2048/: gamectrl.py
agents/: agent.py  agents.py
frozenlake/: __init__.py  config.py  eps_greedy.py  frozen_lake.py  frozenlake.py  frozenlake2.py  helpers.py  policy.py  ql.py  rmc.py
frozenlake/policy/: base.py  inc_mc.py  ql.py  random_mc.py
frozenlake/utils/: helpers.py  misc.py
g2048/: agent.py  dqn.py  game.py  gamectrl.py  gym_game.py  gym_play.py  main.py  play.py  policy_state_dict.pth  questions.txt  test_merge.py  trial0_policy.pth  utils2048.py
grid/: agent.py  environment.py  game.py
lab2048/: agent.py  gamectrl.py  grid2048.py  main.py  test_merge.py
logic/: agent.py  logic.py  propkb.py  world.py  wumpus.py
ml/: neurons.py  nn.py  tf.py  weight.py
rai/: __init__.py
rai/agents/: base.py  imc_learner.py  q_learner.py  rl_agent.py  rmc_learner.py
rai/g2048/: __init__.py  agent.py  expectimax.py  ffctrl.py  gamectrl.py  gg.py  heuristicai.py  main.py  searchai.py
rl/: README.md  config.py  eps_greedy.py  frozen_lake.py  helpers.py  lab01.py  lab02.py  misc.py  models.py  policy.py  q_learning.py
search/: cannibals.py  search.py
sudoku/: csp.py  csp_info.txt  csp_solutions.txt  csp_sudoku.py  grid.py  info.txt  main.py  mrv_csp_sol.txt  mrv_solver_solutions.txt  solutions.txt  solved.txt  solver.py  sudoku.py  sudoku.txt  vars0.txt  vars1.txt  vars2.txt
templates/: grid.template
tests/: test_merge.py  test_tictactoe.py
tictactoe/: agent.py  env.py  game.py  main.py  model.json  random_agent.py  state.py  t3_agent.py  t3_engine.py
(+81 files in other folders)
