[tool.poetry]
name = "rai"
version = "0.1.0"
description = ""
authors = ["Noe Javet <np.javet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipython = "^8.31.0"
gymnasium = "^1.0.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
pydantic = "^2.10.4"
jinja2 = "^3.1.5"
rich = "^13.9.4"
pygame = "^2.6.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grid = "rai.rl.grid:main"
fl = "rai.rl.gymenvs:frozenlake"
g2048 = "rai.rl.rl2048:game"

