[tool.poetry]
name = "rai"
version = "0.1.0"
description = ""
authors = ["Noe Javet <javetnoe@students.zhaw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipython = "^8.31.0"
gymnasium = "^1.0.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
pydantic = "^2.10.4"
jinja2 = "^3.1.5"
rich = "^13.9.4"
pygame = "^2.6.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
selenium = "^4.27.1"
mplcyberpunk = "^0.7.5"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grid = "rai.rl.grid:main"
fl = "rai.rl.gymenvs:frozenlake"
play_2048 = "rai.rl.g2048:play_2048"
